// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`PasswordRequirements snapshots should match snapshot with empty password 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least 8 characters",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one uppercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one lowercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one number",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one special character",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "marginTop": 8,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PasswordRequirements snapshots should match snapshot with valid password 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least 8 characters",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one uppercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one lowercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one number",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "marginRight": 8,
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one special character",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "marginTop": 8,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PasswordRequirements snapshots should match snapshot without checkmarks 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least 8 characters",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one uppercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one lowercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one number",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one special character",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 4,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "marginTop": 8,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`PasswordRequirements snapshots should match snapshot when not visible 1`] = `null`;
